src/objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>Additional_cources__c</fullName>
        <label>Additional cources</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sql Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obiee</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Backup_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backup Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batches_Completed__c</fullName>
        <label>Batches Completed</label>
        <summaryFilterItems>
            <field>Batch__c.Status__c</field>
            <operation>equals</operation>
            <value>&quot;completed&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>Batch__c.Training__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Batches_in_progress__c</fullName>
        <label>Batches in progress</label>
        <summaryFilterItems>
            <field>Batch__c.Status__c</field>
            <operation>equals</operation>
            <value>&quot;in progress&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>Batch__c.Training__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Certification_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_No__c</fullName>
        <label>Contact No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Duration_Hours__c</fullName>
        <label>Duration Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_days__c</fullName>
        <label>Duration days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Discount__c</fullName>
        <label>Fee Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lab_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lab Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lab_Faculty__c</fullName>
        <label>Lab Faculty</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <controllingField>City__c</controllingField>
            <picklistValues>
                <fullName>Madapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gachibowli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ameerpet&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjagutta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Koramangala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaya Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marathalli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tambaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guindy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeppiar Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gandhi Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andheri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navy Mumbai&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Morning_Sessions__c</fullName>
        <label>Morning Sessions</label>
        <summaryFilterItems>
            <field>Batch__c.Session__c</field>
            <operation>equals</operation>
            <value>&quot;Morning&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>Batch__c.Training__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Sessions__c</fullName>
        <label>Other Sessions</label>
        <summaryFilterItems>
            <field>Batch__c.Session__c</field>
            <operation>notEqual</operation>
            <value>&quot;Morning&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>Batch__c.Training__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Placement_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Placement Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Balance_Fee__c</fullName>
        <formula>Total_fee__c  -  Total_Fee_paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fee_paid__c</fullName>
        <label>Total Fee paid</label>
        <summarizedField>Batch__c.Students_Fee_paid__c</summarizedField>
        <summaryForeignKey>Batch__c.Training__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_fee__c</fullName>
        <label>Total fee</label>
        <summarizedField>Batch__c.Students_Fee__c</summarizedField>
        <summaryForeignKey>Batch__c.Training__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_of_training__c</fullName>
        <label>Type of training</label>
        <picklist>
            <picklistValues>
                <fullName>On-line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class Room</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Training</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training</pluralLabel>
    <recordTypes>
        <fullName>X123</fullName>
        <active>true</active>
        <label>123</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DURATION_VALIDATION</fullName>
        <active>true</active>
        <errorConditionFormula>Duration_Hours__c &lt; 40 || Duration_Hours__c &gt; 50 || ISBLANK( Duration_Hours__c ) || Duration_days__c &gt; 50 || Duration_days__c &lt; 40 || ISBLANK( Duration_days__c )</errorConditionFormula>
        <errorMessage>DURATION MUST 40 TO 50</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fee_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Fee__c &lt; 10000 || Fee__c &gt; 20000 || ISBLANK(Fee__c)</errorConditionFormula>
        <errorMessage>FEE MUST BE ABOVE RS.10000</errorMessage>
    </validationRules>
</CustomObject>